--- a/beeyan.css
+++ b/beeyan.css
@@ -27,30 +27,6 @@ body{
     display: block;
 }
 
-@media screen and (max-width: 425px) {
-    html,body{
-        width : 100%;
-        height : auto;
-        margin : 0;
-        padding : 0.5rem;
-        overflow-x: hidden;
-    }
-
-.booking {
-    height: auto;
-    padding: 1rem;
-}
-
-#BTL_client {
-    margin: 1rem 0;
-}
-
-#BTL_client iframe {
-    width: 100%;
-    height: 600px;
-}
-
-}
 
 @keyframes slideIn {
     from {
@@ -65,5 +41,25 @@ body{
 
 .tab-btn.active {
     background-color: #E5E7EB;
+}
+
+@media screen and (max-width: 450px) {
+    
+    /* Booking section */
+    .booking {
+        height: auto;
+        padding: 1rem;
+    }
+    
+    #BTL_client {
+        margin: 1rem 0;
+    }
+    
+    #BTL_client iframe {
+        width: 100%;
+        height: 600px;
+    }
+
+    
 }
 
