--- a/beeyan.css
+++ b/beeyan.css
@@ -28,6 +28,8 @@ body{
 }
 
 
+
+
 @keyframes slideIn {
     from {
         opacity: 0;
@@ -59,7 +61,27 @@ body{
         width: 100%;
         height: 600px;
     }
-
     
 }
 
+@media screen and (max-width: 766px) {
+    
+    /* Booking section */
+    .hide-file{
+        display : none ;
+    }
+
+    .worktabs {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .text-2xl {
+        font-size: 1rem;
+    }
+    
+    .h-screen {
+        height: 70vh;
+    }
+
+}
